feat : added faq page

--- a/frontend/pages/aboutUs.html
+++ b/frontend/pages/aboutUs.html
@@ -46,92 +46,110 @@
                 <button class="btn btn-dark p-3 mt-3 mt-lg-0">Learn More</button>
             </div>
         </div>
-        <div class="heroStats row px-3 px-sm-5 py-5 my-5">
+        <div class="heroStats row px-3 px-sm-5 py-5 my-5 rounded-3">
             <div class="col-6 col-sm-2 mb-4 mb-sm-0 mx-auto">
-                <h4>300+</h4>
-                <span>New volunteer</span>
+                <h4 class="boldTitle volunteerCount">300+</h4>
+                <span class="content">New volunteer</span>
             </div>
             <div class="col-6 col-sm-2 mb-4 mb-sm-0 mx-auto">
-                <h4>88+</h4>
-                <span>Church Location</span>
+                <h4 class="boldTitle churchCount">88+</h4>
+                <span class="content">Church Location</span>
             </div>
             <div class="col-6 col-sm-3 ms-auto">
-                <h4>$86M+</h4>
-                <span>Managed donations</span>
+                <h4 class="boldTitle donationCount">$86M+</h4>
+                <span class="content">Managed donations</span>
             </div>
             <div class="col-6 col-sm-2 mx-auto">
-                <h4>480+</h4>
-                <span>New member</span>
+                <h4 class="boldTitle memberCount">480+</h4>
+                <span class="content">New member</span>
             </div>
         </div>
     </section>
 
-    <section class="container pageMargin">
-        
-        <div class="row m-0 mb-5">
-            <h2 class="col-12 col-md-4 sectionHeading ps-3">walking together,growing in faith</h2>
-            <p class="col-12 col-md-6 ms-auto mt-3 mt-md-0">A long established fact that a reader will be distracted by
-                the readable content of
-                a page
-                when looking.A
-                long established fact that.A long.</p>
-        </div>
-        <div class="d-flex flex-column flex-md-row gap-5">
-            <div class="growingFaithCard d-flex flex-column gap-4 rounded-3 py-4 px-3 text-center">
-                <div>
-                    <img src="http://127.0.0.1:3000/assets/aboutUs/growingFaith/mission.png" alt="mission">
+    <section class="pageMargin position-relative">
+        <img src="http://127.0.0.1:3000/assets/aboutUs/background/key.png" alt="key"
+            class="position-absolute end-0 z-0 d-none d-md-block">
+        <div class="container position-relative z-1">
+            <div class="row m-0 mb-5">
+                <h2 class="col-12 col-md-4 sectionHeading ps-3">walking together , growing in faith</h2>
+                <p class="col-12 col-md-6 ms-auto mt-3 mt-md-0">A long established fact that a reader will be distracted
+                    by
+                    the readable content of
+                    a page
+                    when looking.A
+                    long established fact that.A long.</p>
+            </div>
+            <div class="d-flex flex-column flex-md-row gap-5">
+                <div class="growingFaithCard d-flex flex-column gap-4 rounded-3 py-4 px-3 text-center">
+                    <div>
+                        <img src="http://127.0.0.1:3000/assets/aboutUs/growingFaith/mission.png" alt="mission">
+                    </div>
+                    <div>
+                        <h4 class="cardTitle">Our mission</h4>
+                        <p class="content">A long established fact that a reader will be A long</p>
+                    </div>
                 </div>
-                <div>
-                    <h4 class="cardTitle">Our mission</h4>
-                    <p class="content">A long established fact that a reader will be A long</p>
+                <div class="growingFaithCard d-flex flex-column gap-4 rounded-3 py-4 px-3 text-center">
+                    <div>
+                        <img src="http://127.0.0.1:3000/assets/aboutUs/growingFaith/vision.png" alt="mission">
+                    </div>
+                    <div>
+                        <h4 class="cardTitle">Our vision</h4>
+                        <p class="content">A long established fact that a reader will be A long</p>
+                    </div>
+                </div>
+                <div class="growingFaithCard d-flex flex-column gap-4 rounded-3 py-4 px-3 text-center">
+                    <div>
+                        <img src="http://127.0.0.1:3000/assets/aboutUs/growingFaith/passion.png" alt="mission">
+                    </div>
+                    <div>
+                        <h4 class="cardTitle">Our passion</h4>
+                        <p class="content">A long established fact that a reader will be A long</p>
+                    </div>
                 </div>
             </div>
-            <div class="growingFaithCard d-flex flex-column gap-4 rounded-3 py-4 px-3 text-center">
-                <div>
-                    <img src="http://127.0.0.1:3000/assets/aboutUs/growingFaith/vision.png" alt="mission">
-                </div>
-                <div>
-                    <h4 class="cardTitle">Our vision</h4>
-                    <p class="content">A long established fact that a reader will be A long</p>
-                </div>
-            </div>
-            <div class="growingFaithCard d-flex flex-column gap-4 rounded-3 py-4 px-3 text-center">
-                <div>
-                    <img src="http://127.0.0.1:3000/assets/aboutUs/growingFaith/passion.png" alt="mission">
-                </div>
-                <div>
-                    <h4 class="cardTitle">Our passion</h4>
-                    <p class="content">A long established fact that a reader will be A long</p>
-                </div>
-            </div>
-        </div>
 
-        <div class="mt-5">
+            <div class="mt-5">
 
+            </div>
         </div>
     </section>
 
-    <section class="container pageMargin">
-        <div class="row m-0">
-            <div class="col-12 col-md-6 col-lg-4 mx-auto mb-3 mb-md-0 position-relative ">
-                <img src="http://127.0.0.1:3000/assets/aboutUs/happyPrayers/book.png" alt="book" class="w-100 ">
-                <img src="http://127.0.0.1:3000/assets/aboutUs/happyPrayers/count.png" alt="count" class="position-absolute prayerCount">
-            </div>
-            <div class="col-12 col-md-6 col-lg-4 mx-auto d-flex flex-column justify-content-around">
-                <div class="position-relative">
-                    <img src="http://127.0.0.1:3000/assets/aboutUs/happyPrayers/1.png" alt="one" class="position-absolute happyPrayersNumber d-none d-sm-block d-md-none d-lg-block">
-                    <h4 class="cardHeading">Who Are we</h4>
-                    <p class="content">A long established fact that a reader will be A long established fact that a reader.</p>
+    <section class="pageMargin position-relative">
+        <img src="http://127.0.0.1:3000/assets/aboutUs/background/bow.png" alt="key"
+        class="position-absolute start-0 z-0 d-none d-md-block">
+        <div class="container">
+            <div class="row m-0">
+                <div class="col-12 col-md-6 col-lg-4 mx-auto mb-3 mb-md-0 position-relative ">
+                    <img src="http://127.0.0.1:3000/assets/aboutUs/happyPrayers/book.png" alt="book" class="w-100 ">
+                    <div
+                        class="prayerCountContainer position-absolute d-none d-sm-flex flex-column justify-content-center  align-items-center">
+                        <h4 class="prayerCount"> 26K+</h4>
+                        <span>Happy Prayers</span>
+                    </div>
                 </div>
-                <div class="position-relative">
-                    <img src="http://127.0.0.1:3000/assets/aboutUs/happyPrayers/2.png" alt="two" class="position-absolute happyPrayersNumber d-none d-sm-block d-md-none d-lg-block">
-                    <h4 class="cardHeading">What we believe</h4>
-                    <p class="content">A long established fact that a reader will be A long established fact that a reader will be distracted.</p>
-                </div>
-                <div class="position-relative">
-                    <img src="http://127.0.0.1:3000/assets/aboutUs/happyPrayers/3.png" alt="three" class="position-absolute happyPrayersNumber d-none d-sm-block d-md-none d-lg-block">
-                    <h4 class="cardHeading">our community</h4>
-                    <p class="content">A long established fact that a reader will be A long established fact that a reader will be distracted.A long established fact that a reader.</p>
+                <div class="col-12 col-md-6 col-lg-4 mx-auto d-flex flex-column justify-content-around">
+                    <div class="position-relative">
+                        <img src="http://127.0.0.1:3000/assets/aboutUs/happyPrayers/1.png" alt="one"
+                            class="position-absolute prayersNumber d-none d-sm-block d-md-none d-lg-block">
+                        <h4 class="cardHeading">Who Are we</h4>
+                        <p class="content">A long established fact that a reader will be A long established fact that a
+                            reader.</p>
+                    </div>
+                    <div class="position-relative">
+                        <img src="http://127.0.0.1:3000/assets/aboutUs/happyPrayers/2.png" alt="two"
+                            class="position-absolute prayersNumber d-none d-sm-block d-md-none d-lg-block">
+                        <h4 class="cardHeading">What we believe</h4>
+                        <p class="content">A long established fact that a reader will be A long established fact that a
+                            reader will be distracted.</p>
+                    </div>
+                    <div class="position-relative">
+                        <img src="http://127.0.0.1:3000/assets/aboutUs/happyPrayers/3.png" alt="three"
+                            class="position-absolute prayersNumber d-none d-sm-block d-md-none d-lg-block">
+                        <h4 class="cardHeading">our community</h4>
+                        <p class="content">A long established fact that a reader will be A long established fact that a
+                            reader will be distracted.A long established fact that a reader.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -142,7 +160,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <script src="../js/aboutUS.js" type="module"></script>
+    <script src="../js/aboutUs/index.js" type="module"></script>
 </body>
 
 </html>
