--- a/frontend/pages/question.html
+++ b/frontend/pages/question.html
@@ -21,212 +21,38 @@
             <span class="bold-content"> > </span>
             <span class="bold-content"> EVENTS </span>
         </div>
-        <div class="my-5">
-            <img src="http://127.0.0.1:3000/assets/question/hero.png" alt="hero" class="w-100">
+        <div class="position-relative">
+            <div class=" overflow-x-hidden">
+                <div class="row flex-nowrap heroCarouselContainer">
+
+                </div>
+            </div>
+            <div class="d-flex flex-row flex-md-column gap-3 gap-md-0 mt-3 mt-md-0 arrowContainer">
+                <button class="p-2 p-md-3 ms-auto rounded-3 heroLeftButton"><img
+                        src="http://127.0.0.1:3000/assets/question/leftArrow.png" alt="left arrow"></button>
+                <button class="p-2 p-md-3 me-auto rounded-3 heroRightButton"><img
+                        src="http://127.0.0.1:3000/assets/question/rightArrow.png" alt="right arrow"></button>
+            </div>
         </div>
     </section>
 
     <section class="container pageMargin">
         <div>
-            <h2 class="sectionHeading ps-3 mb-4">Frequently Asked Questions</h2>
+            <h2 class="sectionHeading ps-3 mb-5">Frequently Asked Questions</h2>
             <p class="content w-75">It is a long established fact that a reader will be distracted by the readable
                 content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a
                 more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it
                 look like.</p>
         </div>
 
-        <div>
+        <div class="d-flex flex-column flex-md-row justify-content-around gap-1 gap-md-5 mt-5">
+            <div class="accordion accordion-flush leftAccordion d-flex flex-column gap-4">
 
-            <div class="accordion accordion-flush" id="accordionFlushExample">
-                <div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseOne" aria-expanded="false"
-                                aria-controls="flush-collapseOne">
-                                Who are the Disciples of Christ?
-                            </button>
-                        </h2>
-                        <div id="flush-collapseOne" class="accordion-collapse collapse"
-                            data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">A long established fact that a reader will be established fact
-                                that
-                                a
-                                reader will be distracted by the readable content of a page when looking at its layout.
-                                The
-                                point of using.</div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseTwo" aria-expanded="false"
-                                aria-controls="flush-collapseTwo">
-                                How big is the church?
-                            </button>
-                        </h2>
-                        <div id="flush-collapseTwo" class="accordion-collapse collapse"
-                            data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">A long established fact that a reader will be established fact
-                                that
-                                a
-                                reader will be distracted by the readable content of a page when looking at its layout.
-                                The
-                                point of using..</div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseThree" aria-expanded="false"
-                                aria-controls="flush-collapseThree">
-                                What time is your Sunday service?
-                            </button>
-                        </h2>
-                        <div id="flush-collapseThree" class="accordion-collapse collapse"
-                            data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">A long established fact that a reader will be established fact
-                                that
-                                a
-                                reader will be distracted by the readable content of a page when looking at its layout.
-                                The
-                                point of using.</div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseThree" aria-expanded="false"
-                                aria-controls="flush-collapseThree">
-                                What do you offer and toddlers?
-                            </button>
-                        </h2>
-                        <div id="flush-collapseThree" class="accordion-collapse collapse"
-                            data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">A long established fact that a reader will be established fact
-                                that
-                                a
-                                reader will be distracted by the readable content of a page when looking at its layout.
-                                The
-                                point of using.</div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseThree" aria-expanded="false"
-                                aria-controls="flush-collapseThree">
-                                Who goes to your church?
-                            </button>
-                        </h2>
-                        <div id="flush-collapseThree" class="accordion-collapse collapse"
-                            data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">A long established fact that a reader will be established fact
-                                that
-                                a
-                                reader will be distracted by the readable content of a page when looking at its layout.
-                                The
-                                point of using.</div>
-                        </div>
-                    </div>
-                </div>
             </div>
+            <div class="accordion accordion-flush rightAccordion d-flex flex-column gap-4">
 
-            <!-- <div class="accordion accordion-flush" id="accordionFlushExample">
-                <div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseSeven" aria-expanded="false"
-                                aria-controls="flush-collapeSeven">
-                                Who are the Disciples of Christ?
-                            </button>
-                        </h2>
-                        <div id="flush-collapseOne" class="accordion-collapse collapse"
-                            data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">A long established fact that a reader will be established fact
-                                that
-                                a
-                                reader will be distracted by the readable content of a page when looking at its layout.
-                                The
-                                point of using.</div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseTwo" aria-expanded="false"
-                                aria-controls="flush-collapseTwo">
-                                How big is the church?
-                            </button>
-                        </h2>
-                        <div id="flush-collapseTwo" class="accordion-collapse collapse"
-                            data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">A long established fact that a reader will be established fact
-                                that
-                                a
-                                reader will be distracted by the readable content of a page when looking at its layout.
-                                The
-                                point of using..</div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseThree" aria-expanded="false"
-                                aria-controls="flush-collapseThree">
-                                What time is your Sunday service?
-                            </button>
-                        </h2>
-                        <div id="flush-collapseThree" class="accordion-collapse collapse"
-                            data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">A long established fact that a reader will be established fact
-                                that
-                                a
-                                reader will be distracted by the readable content of a page when looking at its layout.
-                                The
-                                point of using.</div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseThree" aria-expanded="false"
-                                aria-controls="flush-collapseThree">
-                                What do you offer and toddlers?
-                            </button>
-                        </h2>
-                        <div id="flush-collapseThree" class="accordion-collapse collapse"
-                            data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">A long established fact that a reader will be established fact
-                                that
-                                a
-                                reader will be distracted by the readable content of a page when looking at its layout.
-                                The
-                                point of using.</div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseThree" aria-expanded="false"
-                                aria-controls="flush-collapseThree">
-                                Who goes to your church?
-                            </button>
-                        </h2>
-                        <div id="flush-collapseThree" class="accordion-collapse collapse"
-                            data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">A long established fact that a reader will be established fact
-                                that
-                                a
-                                reader will be distracted by the readable content of a page when looking at its layout.
-                                The
-                                point of using.</div>
-                        </div>
-                    </div>
-                </div>
             </div>
-        </div> -->
+        </div>
 
     </section>
 
@@ -236,7 +62,9 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 
-    <script type="module" src="../js/question.js"></script>
+    <script type="module" src="../js/question/index.js"></script>
+    <script type="module" src="../js/question/hero.js"></script>
+    <script type="module" src="../js/question/accordion.js"></script>
 </body>
 
 </html>
