--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shrine Page</title>
-    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/home/index.css" />
+    <link rel="stylesheet" href="./styles/helper/helper.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 </head>
@@ -266,7 +267,7 @@
                 </div>
                 <div class="col-12 row mt-4 mx-auto ">
                     <button class="btn btn-dark buttonWidth col-sm-3 mb-3 mb-sm-0">Learn More</button>
-                    <div class="col-sm-6 ms-auto p-0 handImage">
+                    <div class="col-sm-5 ms-auto p-0 handImage">
                         <img src="http://127.0.0.1:3000/assets/home/ourWork/cross.png" alt="hand" class="w-100 h-100">
                     </div>
                 </div>
@@ -388,7 +389,9 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 
-    <script type="module" src="/frontend/script.js"></script>
+    <script type="module" src="./script.js"></script>
+    <script type="module" src="./component/navbar.js"></script>
+    <script type="module" src="./component/footer.js"></script>
 </body>
 
 </html>
