--- a/frontend/pages/aboutUs.html
+++ b/frontend/pages/aboutUs.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About US</title>
-    <link rel="stylesheet" href="../styles/aboutUs.css">
+    <link rel="stylesheet" href="../styles/aboutUs/aboutUs.css">
+    <link rel="stylesheet" href="../styles/helper/helper.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 </head>
@@ -117,7 +118,7 @@
 
     <section class="pageMargin position-relative">
         <img src="http://127.0.0.1:3000/assets/aboutUs/background/bow.png" alt="key"
-        class="position-absolute start-0 z-0 d-none d-md-block">
+            class="position-absolute start-0 z-0 d-none d-md-block">
         <div class="container">
             <div class="row m-0">
                 <div class="col-12 col-md-6 col-lg-4 mx-auto mb-3 mb-md-0 position-relative ">
@@ -157,10 +158,13 @@
 
     <section class="footer pb-3 mt-5"> </section>
 
+
+    <script type="module" src="../component/navbar.js"></script>
+    <script type="module" src="../component/footer.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <script src="../js/aboutUs/index.js" type="module"></script>
+    <script type="module" src="../js/aboutUs/aboutUs.js"></script>
 </body>
 
 </html>
