--- a/frontend/pages/question.html
+++ b/frontend/pages/question.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frequently Asked Question</title>
-    <link rel="stylesheet" href="../styles/questions.css" />
+    <link rel="stylesheet" href="../styles/question/questions.css" />
+    <link rel="stylesheet" href="../styles/helper/helper.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 </head>
@@ -23,7 +24,7 @@
         </div>
         <div class="position-relative">
             <div class=" overflow-x-hidden">
-                <div class="row flex-nowrap heroCarouselContainer">
+                <div class="row flex-nowrap heroCarouselWrapper">
 
                 </div>
             </div>
@@ -58,13 +59,13 @@
 
     <section class="footer pb-3 mt-5"> </section>
 
+    <script type="module" src="../component/navbar.js"></script>
+    <script type="module" src="../component/footer.js"></script>
+    <script type="module" src="../js/question/hero.js"></script>
+    <script type="module" src="../js/question/accordion.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-
-    <script type="module" src="../js/question/index.js"></script>
-    <script type="module" src="../js/question/hero.js"></script>
-    <script type="module" src="../js/question/accordion.js"></script>
 </body>
 
 </html>
