--- a/frontend/pages/question.html
+++ b/frontend/pages/question.html
@@ -37,7 +37,9 @@
         </div>
     </section>
 
-    <section class="container pageMargin">
+    <section class="pageMargin position-relative">
+        <img src="http://127.0.0.1:3000/assets/question/backgroundImage/crown.png" alt="crown" class="position-absolute end-0 d-none d-md-block">
+        <div class="container">
         <div>
             <h2 class="sectionHeading ps-3 mb-5">Frequently Asked Questions</h2>
             <p class="content w-75">It is a long established fact that a reader will be distracted by the readable
@@ -54,6 +56,7 @@
 
             </div>
         </div>
+    </div>
 
     </section>
 
