feat: added videoListing and event section

--- a/frontend/pages/aboutUs.html
+++ b/frontend/pages/aboutUs.html
@@ -20,7 +20,7 @@
             <span class="bold-content"> > </span>
             <span class="bold-content">PAGES</span>
             <span class="bold-content"> > </span>
-            <span class="bold-content"> EVENTS </span>
+            <span class="bold-content"> ABOUT US </span>
         </div>
         <div class="row">
             <div class="col-12 col-lg-6 mb-5 mb-lg-0">
