--- a/frontend/pages/question.html
+++ b/frontend/pages/question.html
@@ -20,7 +20,7 @@
             <span class="bold-content"> > </span>
             <span class="bold-content">PAGES</span>
             <span class="bold-content"> > </span>
-            <span class="bold-content"> EVENTS </span>
+            <span class="bold-content"> FAQ </span>
         </div>
         <div class="position-relative">
             <div class=" overflow-x-hidden">
