--- a/frontend/pages/gallery.html
+++ b/frontend/pages/gallery.html
@@ -20,7 +20,7 @@
             <span class="bold-content"> > </span>
             <span class="bold-content">PAGES</span>
             <span class="bold-content"> > </span>
-            <span class="bold-content"> EVENTS </span>
+            <span class="bold-content"> GALLERY </span>
         </div>
         <div class="d-flex flex-column flex-md-row gap-3 gap-md-4 gap-lg-5">
             <div class="heroImage">
